// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "f21371b6bf076f4c18584b88f413b835a628ca341675491285fe7d142d84ce7f",
  "floor": 10,
  "status": "won",
  "turn": 893,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "251535da92541f78f3bd7c08ffbcc758b35aa9ee996c33946cb89b432ff5e508",
  "floor": 6,
  "status": "returned",
  "turn": 578,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "5c33010692e026ffe1a7733269ccf5e5fa51894ab0f1518d39d9ebd39f32ebff",
  "floor": 6,
  "status": "returned",
  "turn": 561,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "3a37a5b08fb8dddc64a47e633a0034d01681b5b0643ac21a73443dd572435e44",
  "floor": 10,
  "status": "won",
  "turn": 917,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "aae710bd0aaa04380437fa45d9862da8f0e03cdb51c32f47da301a77ec027ef2",
  "floor": 6,
  "status": "returned",
  "turn": 622,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "354b61bd2c14d36d1f12855ebb7d967ab1f90e4156c378fc90f8b3e064b785e1",
  "floor": 10,
  "status": "won",
  "turn": 886,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "0a69b2102fbfa204e041d389672426821bb9ab2e8db3b5119773f5ed9c46affa",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "aa033a2a40e381da72a911d7c3389bc84330ce90ee05e9d9b5cef63c1c3674ef",
  "floor": 10,
  "status": "won",
  "turn": 924,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "170d71c993d58519ec2604877fef843daff11ca3b6d62dca9fe68d8a3a5e49dd",
  "floor": 6,
  "status": "returned",
  "turn": 553,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "3a42386c75920285714c7556d598cdced17327ca99af5a5fbb5c172b5e4d8ecb",
  "floor": 6,
  "status": "returned",
  "turn": 562,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "2f6851003b38e2629af854bc097ea7816d2a927bf7eda1462eb10f5dc7750b43",
  "floor": 10,
  "status": "won",
  "turn": 813,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "5ef5198408812a48c89b97cb28a98aa3d59791b8fd27134ba75c9c87e9a5b97f",
  "floor": 6,
  "status": "returned",
  "turn": 609,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "e5d080028d1ff09c710e8855c01bf570d1bafd42aa52545d6daa358f0517ca0c",
  "floor": 10,
  "status": "won",
  "turn": 865,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "59d2e9d2d54d30e65bf0b80b1408f2931cf49653a54628afb1e8de40d54708b7",
  "floor": 6,
  "status": "returned",
  "turn": 476,
}
`;
